--- a/organizationservice/organizationservice.yaml
+++ b/organizationservice/organizationservice.yaml
@@ -4,7 +4,7 @@ spring:
     show-sql: true
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     url: "jdbc:mariadb://100.100.15.82:3306/organization?characterEncoding=UTF-8"
     driver-class-name: "org.mariadb.jdbc.Driver"
