generate ddl off

--- a/erp-service/erp-service.yaml
+++ b/erp-service/erp-service.yaml
@@ -2,7 +2,7 @@
 spring:
   jpa:
     show-sql: true
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
       ddl-auto: none
   datasource:
