--- a/erp-service/erp-service.yaml
+++ b/erp-service/erp-service.yaml
@@ -8,7 +8,7 @@ spring:
   datasource:
     url: "jdbc:mariadb://100.100.10.177:3306/INVENIA_DEV?characterEncoding=UTF-8"
     driver-class-name: "com.microsoft.sqlserver.jdbc.SQLServerDriver"
-    username: "e1264"
+    username: "kafka"
     password: "inveni@2020"
 example:
   profile: "Current profile is default"
