--- a/internal_web/docker-compose.yml
+++ b/internal_web/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - target: 80
         published: 80
         protocol: tcp
+      - target: 443
+        published: 443
+        protocol: tcp
       - target: 8000
         published: 8000
         protocol: tcp
