--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:15.0.2
+    image: quay.io/keycloak/keycloak:latest
     restart: on-failure
     ports:
       - "4080:8080"
