--- a/msa-base/docker-compose.yaml
+++ b/msa-base/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
         reservations:
           cpus: '0.10'
           memory: 128M
+    environment:
+      TZ: "Asia/Seoul"
     build:
       context: ./eureka-server
 
@@ -36,6 +38,7 @@ services:
           cpus: '0.10'
           memory: 128M
     environment:
+      TZ: "Asia/Seoul"
       EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
       EUREKASERVER_PORT: "8761"
       ENCRYPT_KEY: "damu"
@@ -61,6 +64,7 @@ services:
           cpus: '0.10'
           memory: 128M
     environment:
+      TZ: "Asia/Seoul"
       KEYCLOAK_URI: "https://sso.inveniacorp.com:8080/auth" # 호스트 주소
       KEYCLOAK_REALM: "service"
       KEYCLOAK_REDIRECT_URI: "https://apigw.inveniacorp.com" # 게이트웨이 주소
