--- a/erp-service/docker-compose.yaml
+++ b/erp-service/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     ports:
       - "8010:8010"
     environment:
+      TZ: "Asia/Seoul"
       PROFILE: "default"
       SERVER_PORT: "8010"
       EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
