--- a/erp-service/erp-service.yaml
+++ b/erp-service/erp-service.yaml
@@ -6,6 +6,16 @@ spring:
   config:
     activate:
       on-profile: dev
+  jpa:
+    show-sql: true
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+  datasource:
+    url: "jdbc:mariadb://100.100.10.177:3306/INVENIA_DEV"
+    driver-class-name: "org.mariadb.jdbc.Driver"
+    username: "e1264"
+    password: "inveni@2020"
 ---
 # Product settings
 spring:
