--- a/internal_web/docker-compose.yml
+++ b/internal_web/docker-compose.yml
@@ -21,6 +21,9 @@ services:
       - target: 8080
         published: 8080
         protocol: tcp
+      - target: 9092
+        published: 9092
+        protocol: tcp
     deploy:
       mode: global
       #replicas: 3
