--- a/erp-service/docker-compose.yaml
+++ b/erp-service/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - "8010:8010"
     environment:
       TZ: "Asia/Seoul"
-      PROFILE: "default"
+      SPRING_PROFILES_ACTIVE: prod
       SERVER_PORT: "8010"
       EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
       EUREKASERVER_PORT: "8761"
