--- a/internal_web/docker-compose.yml
+++ b/internal_web/docker-compose.yml
@@ -1,17 +1,11 @@
 version: '3.8'
 
 services:
-  #internal-web:
   nginx:
     image: kds.inveniacorp.com/dev/internal-web/internal-web:latest
     volumes:
-      #- "/var/lib/docker/volumes/nginx/logs:/logs"
-      - /www/internal-web/ssl:/www/internal-web/ssl
-
+      - "/var/lib/docker/volumes/nginx/logs:/logs"
     ports:
-      - target: 80
-        published: 80
-        protocol: tcp
       - target: 443
         published: 443
         protocol: tcp
@@ -23,16 +17,6 @@ services:
         protocol: tcp
     deploy:
       mode: global
-      #replicas: 3
-      resources:
-        limits:
-          cpus: '0.25'
-          #cpus: '0.50'
-          memory: 512M
-        reservations:
-          cpus: '0.10'
-          #cpus: '0.20'
-          memory: 128M
       placement:
         constraints: [node.platform.os == linux]
     networks:
