--- a/internal_web/docker-compose.yml
+++ b/internal_web/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.8'
 services:
   nginx:
     image: kds.inveniacorp.com/dev/internal-web/internal-web:latest
+    volumes:
+      #- "/var/lib/docker/volumes/nginx/logs:/logs"
+      - /www/internal-web/ssl:/www/internal-web/ssl
     ports:
       - target: 443
         published: 443
