--- a/internal_web/docker-compose.yml
+++ b/internal_web/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       #- "/var/lib/docker/volumes/nginx/logs:/logs"
       - /www/internal-web/ssl:/www/internal-web/ssl
     ports:
+      - target: 80
+        published: 80
+        protocol: tcp
       - target: 443
         published: 443
         protocol: tcp
