--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -64,10 +64,11 @@ services:
       CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_PLUGIN_PATH: "/usr/share/java,/etc/kafka-connect/jars"
-      CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
+      CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR,kafka.connect
     volumes:
       - /data/confluent/connect/confluentinc-kafka-connect-jdbc-10.2.5/lib:/etc/kafka-connect/jars
       - /data/confluent/connect/jre:/etc/alternatives/jre
+      - /data/altibase/:/usr/share/java/kafka-connect-jdbc/jars/
     networks:
       - msa
 
