--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
       CONNECT_PLUGIN_PATH: "/usr/share/java"
       CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR,kafka.connect
     volumes:
-      - /data/confluent/connect/confluentinc-kafka-connect-jdbc-10.2.5/lib:/usr/share/java/kafka-connect-jdbc/jars/
+      - /data/confluent/connect/jars:/usr/share/java/kafka-connect-jdbc/jars/
       - /data/confluent/connect/jre:/etc/alternatives/jre
     networks:
       - msa
