GW 서비스 명 수정

--- a/gw-service/docker-compose.yaml
+++ b/gw-service/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  erpservice:
+  gwservice:
     image: kds.inveniacorp.com/dev/gw-service/gw-service:latest
     restart: on-failure
     ports:
