RABBITMQ_HOST 변경

--- a/msa-base/docker-compose.yaml
+++ b/msa-base/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       - msa
     environment:
       TZ: "Asia/Seoul"
+      RABBITMQ_HOST: "rabbitmq"
       EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
       EUREKASERVER_PORT: "8761"
       ENCRYPT_KEY: "damu"
@@ -38,6 +39,7 @@ services:
       - msa
     environment:
       TZ: "Asia/Seoul"
+      RABBITMQ_HOST: "rabbitmq"
       KEYCLOAK_URI: "https://sso.inveniacorp.com:8080/auth" # 호스트 주소
       KEYCLOAK_REALM: "service"
       KEYCLOAK_REDIRECT_URI: "https://apigw.inveniacorp.com" # 게이트웨이 주소
@@ -55,5 +57,4 @@ services:
 networks:
   msa:
     external: true
-
     name: msa
