--- a/rabbitmq/docker-compose.yaml
+++ b/rabbitmq/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      RABBITMQ_HOST: "rabbitmq"
+      #RABBITMQ_HOST: "rabbitmq"
       RABBITMQ_ERLANG_COOKIE: "RabbitMQ-Cookies"
       RABBITMQ_DEFAULT_USER: "admin"
       RABBITMQ_DEFAULT_PASS: "inveni@2021"
