--- a/gw-service/docker-compose.yaml
+++ b/gw-service/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - "8011:8011"
     environment:
       TZ: "Asia/Seoul"
+      RABBITMQ_HOST: "rabbitmq"
       SPRING_PROFILES_ACTIVE: prod
       SERVER_PORT: "8011"
       EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
