--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       TZ: "Asia/Seoul"
       # Admin account
       KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
+      KEYCLOAK_PASSWORD: inveni@2021
       KEYCLOAK_FRONTEND_URL: "https://sso.inveniacorp.com:8080/auth/"
       PROXY_ADDRESS_FORWARDING: "true"
       # DB
@@ -21,6 +21,8 @@ services:
       DB_DATABASE: keycloak_dev
       DB_USER: e1264
       DB_PASSWORD: inveni@2020
+    volumes:
+      - /data/nfs/keycloak-theme:/opt/jboss/keycloak/themes/keycloak-theme
     command:
       - "-b"
       - "0.0.0.0"
