keycloak 프론트 엔드 포트 8080 -> 443

--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       # Admin account
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
-      KEYCLOAK_FRONTEND_URL: "https://sso.inveniacorp.com:8080/auth/"
+      KEYCLOAK_FRONTEND_URL: "https://sso.inveniacorp.com/auth/"
       PROXY_ADDRESS_FORWARDING: "true"
       # DB
       DB_VENDOR: mariadb
