edit dockerfile path

--- a/.github/workflows/internal-nginx-build.yaml
+++ b/.github/workflows/internal-nginx-build.yaml
@@ -3,7 +3,9 @@ name: Internal Web Build Action
 on:
   push:
     paths:
+      - ".github/workflows/internal-nginx-build.yaml"
       - "internal_web/nginx.conf"
+      - "internal_web/Dockerfile"
 
 jobs:
 
