--- a/internal_web/docker-compose.yaml
+++ b/internal_web/docker-compose.yaml
@@ -3,11 +3,14 @@ version: '3.8'
 services:
   nginx:
     image: kds.inveniacorp.com/dev/config-repo/internal-web:latest
+    volumes:
+      - /www/internal-web/ssl:/www/internal-web/ssl
     ports:
       - "80:80"
       - "443:443"
       - "8000:8000"
       - "8080:8080"
+      - "9092:9092"
     deploy:
       mode: global
       placement:
