--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -47,16 +47,11 @@ http {
                }
         }
 
-        # [Internal] Kafka
+        # [Internal] Kafka Manager
         upstream manager {
                 least_conn;
                 server manager:9000 weight=10 max_fails=3 fail_timeout=30s;
         }
-        upstream kafka {
-                least_conn;
-                server kafka:9092 weight=10 max_fails=3 fail_timeout=30s;
-        }
-
         server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
