--- a/dmz-web/nginx.conf
+++ b/dmz-web/nginx.conf
@@ -15,7 +15,12 @@ http {
         # API Gateway
         upstream apigateway {
                 least_conn;
+                server 100.100.10.97:8000 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.98:8000 weight=10 max_fails=3 fail_timeout=30s;
                 server 100.100.10.174:8000 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.175:8000 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.176:8000 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.177:8000 weight=10 max_fails=3 fail_timeout=30s;
         }
         server {
                 listen 443 ssl;
@@ -45,7 +50,12 @@ http {
         # Enterprise Portal
         upstream portal {
                 least_conn;
+                server 100.100.10.97:80 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.98:80 weight=10 max_fails=3 fail_timeout=30s;
                 server 100.100.10.174:80 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.175:80 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.176:80 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.177:80 weight=10 max_fails=3 fail_timeout=30s;
         }
         server {
                 listen 443 ssl;
@@ -75,7 +85,12 @@ http {
         # Keycloak
         upstream keycloak {
                 least_conn;
+                server 100.100.10.97:8080 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.98:8080 weight=10 max_fails=3 fail_timeout=30s;
                 server 100.100.10.174:8080 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.175:8080 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.176:8080 weight=10 max_fails=3 fail_timeout=30s;
+                server 100.100.10.177:8080 weight=10 max_fails=3 fail_timeout=30s;
         }
         server {
                 listen 443 ssl;
