--- a/msa-base/api-gateway.yaml
+++ b/msa-base/api-gateway.yaml
@@ -2,6 +2,8 @@
 spring:
   cloud:
     gateway:
+      default-filters:
+        - TokenRelay
       routes:
         - id: erp-service
           uri: lb://ERP-SERVICE
