--- a/gw-service/docker-compose.yaml
+++ b/gw-service/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       CONFIGSERVER_URI: "http://configserver:8888"
       CONFIGSERVER_PORT: "8888"
       ENCRYPT_KEY: "damu"
+    extra_hosts:
+      - "sso.inveniacorp.com: 100.100.10.174"
     build:
       context: .
     networks:
