--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -24,7 +24,7 @@ http {
         # [DMZ] API Gateway
         upstream apigateway {
                 least_conn;
-                server apigateway:8000 weight=10 max_fails=3 fail_timeout=30s;
+                server api-gateway:8000 weight=10 max_fails=3 fail_timeout=30s;
         }
         server {
                listen 8000;
