--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -15,6 +15,7 @@ http {
         # [DMZ] Static Page
         server {
                listen 80;
+               location / {
                          proxy_pass http://100.100.10.207:8080;
                }
         }
