--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -40,6 +40,7 @@ http {
         server {
                listen 8080;
                location / {
+                         proxy_set_header Host $http_host;
                          proxy_pass http://keycloak;
                }
         }
