--- a/dmz-web/nginx.conf
+++ b/dmz-web/nginx.conf
@@ -104,7 +104,7 @@ http {
                 proxy_buffering off;
 
                 location / {
-                        proxy_pass http://keycloak;
+                        proxy_pass https://keycloak;
                         proxy_set_header Host $http_host;
                         proxy_set_header X-Real-IP $remote_addr;
                         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
