--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -26,6 +26,12 @@ http {
                 server keycloak:8080 weight=10 max_fails=3 fail_timeout=30s;
         }
         server {
+               listen 8080;
+               location / {
+                         proxy_pass http://keycloak;
+               }
+        }
+        server {
                 listen 443 ssl;
                 listen [::]:443 ssl;
                 server_name sso.inveniacorp.com;
