--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -6,9 +6,10 @@ pid        /var/run/nginx.pid;
 events { worker_connections 1024; }
 
 http {
-        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+        log_format main '$http_x_forwarded_for - $remote_user [$time_local] '
+        '"$request_method $scheme://$host$request_uri $server_protocol" '
+        '$status $body_bytes_sent "$http_referer" '
+        '"$http_user_agent" $request_time';
 
         access_log  /var/log/nginx/access.log  main;
 
