--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -48,15 +48,13 @@ http {
 
                 location / {
                         proxy_pass http://keycloak;
-                        proxy_set_header Host $http_host;
-                        proxy_set_header X-Real-IP $remote_addr;
-                        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                        proxy_set_header X-Forwarded-Proto $scheme;
-
-                        proxy_connect_timeout 300;
-                        proxy_http_version 1.1;
-                        proxy_set_header Connection "";
-                        chunked_transfer_encoding off;
+                        proxy_set_header    Host               $host;
+                        proxy_set_header    X-Real-IP          $remote_addr;
+                        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+                        proxy_set_header    X-Forwarded-Host   $host;
+                        proxy_set_header    X-Forwarded-Server $host;
+                        proxy_set_header    X-Forwarded-Port   $server_port;
+                        proxy_set_header    X-Forwarded-Proto  $scheme;
                 }
         }
 
