--- a/internal_web/nginx.conf
+++ b/internal_web/nginx.conf
@@ -30,6 +30,13 @@ http {
                listen 8080;
                location / {
                          proxy_pass http://keycloak;
+                         proxy_set_header    Host               $host;
+                         proxy_set_header    X-Real-IP          $remote_addr;
+                         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+                         proxy_set_header    X-Forwarded-Host   $host;
+                         proxy_set_header    X-Forwarded-Server $host;
+                         proxy_set_header    X-Forwarded-Port   $server_port;
+                         proxy_set_header    X-Forwarded-Proto  $scheme;
                }
         }
         server {
